fixed alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -425,6 +425,6 @@ a.symbol {
   margin-top: -1px;
 }
 blockquote  {
-  margin: 1em 2em;
+  margin: 1em 0;
   border-left: 1px dashed #999;
 }
